# jupyterlab-voice-control

./: .gitignore  Example.ipynb  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
schema/: plugin.json
src/: commands.ts  controller.ts  icons.ts  index.ts  types.ts
src/__tests__/: jupyterlab-voice-control.spec.ts
src/components/: status.tsx
style/icons/: README.md
ui-tests/: package.json
ui-tests/tests/: jupyterlab-voice-control.spec.ts
